[package]
name = "moss"
version = "0.2.0"
edition = "2021"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
fuser = { version = "0.14", default-features = false }
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
dokan = "0.3"
dokan-sys = "0.3"
widestring = "0.4"
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = ["ntstatus", "winnt"]

[patch.crates-io]
dokan-sys = { path = "vendor/dokan-sys" }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
